--- a/elements/crew-team-manager-app/crew-team-manager-app.html
+++ b/elements/crew-team-manager-app/crew-team-manager-app.html
@@ -22,6 +22,10 @@
             #login {
                 @apply(--layout-flex);
             }
+
+            #stage {
+                @apply(--layout-flex);
+            }
         </style>
 
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
