--- a/elements/crew-team-manager-app/crew-team-manager-app.html
+++ b/elements/crew-team-manager-app/crew-team-manager-app.html
@@ -3,6 +3,8 @@
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 
+<link rel="import" href="../../bower_components/polymerfire/firebase-app.html">
+
 <link rel="import" href="../crew-team-manager-login/crew-team-manager-login.html">
 <link rel="import" href="../crew-team-manager-stage/crew-team-manager-stage.html">
 
@@ -28,6 +30,11 @@
             }
         </style>
 
+        <firebase-app apiKey: "AIzaSyC9hRU3H5E-8jPEC84CZJVXxW1-2DL1Idc", authDomain: "crew-team-manager.firebaseapp.com", databaseURL:
+            "https://crew-team-manager.firebaseio.com", projectId: "crew-team-manager", storageBucket: "crew-team-manager.appspot.com", messagingSenderId:
+            "629517639732">
+        </firebase-app>
+
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
             <crew-team-manager-login id="login" on-crew-team-manager-login-action-login="_handleActionLogin"></crew-team-manager-login>
             <crew-team-manager-stage id="stage"></crew-team-manager-stage>
@@ -40,59 +47,39 @@
         // Extend Polymer.Element with MyMixin
         class crewTeamManagerApp extends Polymer.Element {
 
-            static get is() { return 'crew-team-manager-app' }
+            static get is() {
+                return 'crew-team-manager-app'
+            }
 
             static get properties() {
                 return {
                     _page: {
                         type: String,
                         value: 'stage'
-                    }
+                    },
                 }
             }
-            connectedCallback() {
 
-                super.connectedCallback();
-                // this.$.logoutBtn.hidden = true;
+            // connectedCallback() {
 
-            }
+            //     super.connectedCallback();
+
+            //     var config = {
+            //         apiKey: "AIzaSyC9hRU3H5E-8jPEC84CZJVXxW1-2DL1Idc",
+            //         authDomain: "crew-team-manager.firebaseapp.com",
+            //         databaseURL: "https://crew-team-manager.firebaseio.com",
+            //         projectId: "crew-team-manager",
+            //         storageBucket: "crew-team-manager.appspot.com",
+            //         messagingSenderId: "629517639732"
+            //     };
+
+            //     firebase.initializeApp(config);
+
+            // }
 
             _handleActionLogin() {
                 this._page = 'stage';
             }
-
-            // login() {
-            //     console.log('login');
-            //     const elem = this.selected && this.selected.nextElementSibling;
-            //     if (elem) {
-            //         console.log('reached?');
-            //         this.selected = elem;
-            //     }
-            //     this.$.logoutBtn.disabled = false;
-            //     this.$.logoutBtn.hidden = false;
-
-            //     this.$.loginBtn.disabled = true;
-            //     this.$.loginBtn.hidden = true;
-
-            //     let pages = this.$.pages;
-            //     pages.selectNext();
-            // }
-
-            // logout() {
-            //     console.log('logout');
-            //     const elem = this.selected && this.selected.previousElementSibling;
-            //     if (elem) {
-            //         this.selected = elem;
-            //     }
-            //     this.$.logoutBtn.disabled = true;
-            //     this.$.logoutBtn.hidden = true;
-
-            //     this.$.loginBtn.disabled = false;
-            //     this.$.loginBtn.hidden = false;
-            //     let pages = this.$.pages;
-            //     pages.selectPrevious();
-            // }
-
         }
 
         // Register custom element definition using standard platform API
