--- a/elements/crew-team-manager-roster/crew-team-manager-roster-message.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-message.html
@@ -3,8 +3,27 @@
 <dom-module id="crew-team-manager-roster-message">
     <template>
         <style>
+             :host {
+                background-color: white;
+                @apply(--layout-horizontal);
+                @apply(--layout-flex);
+            }
 
+            #layout {
+                background-color: lightslategray;
+                @apply(--layout-vertical);
+                @apply(--layout-flex);
+            }
+
+            #message {
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
+                font-size: 36px;
+            }
         </style>
+        <div id="layout">
+            <div id="message">No Athletes Found</div>
+        </div>
     </template>
 
     <script>
@@ -15,12 +34,6 @@
                 return 'crew-team-manager-roster-message'
             }
 
-            _handleActionMenu() {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerRosterMessage.is + '-action-menu', {
-                    bubbles: true,
-                    composed: true
-                }));
-            }
         }
 
         // Register custom element definition using standard platform API
